testsuite/tests/typecheck/should_fail/TyAppPat_PatternBinding.stderr

TyAppPat_PatternBinding.hs:9:1: error:
    • Binding type variables is not allowed in pattern bindings
    • In the pattern: Just @a x
      In a pattern binding: Just @a x = Just (5 :: Integer)
